-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.16.0
-
None
-
3
-
9223372036854775807
Patch https://review.whamcloud.com/38305 ("LU-10499 pcc: add readonly mode for PCC") introduced the following build failure with kernel 6.7:
CC [M] /root/lustre-release/lustre/llite/file.o
/root/lustre-release/lustre/llite/file.c: In function ‘ll_file_ioctl’:
/root/lustre-release/lustre/llite/file.c:4760:45: error: passing argument 1 of ‘inode_owner_or_capable’ from incompatible pointer type [-Werror=incompatible-pointer-types]
4760 | if (!inode_owner_or_capable(&init_user_ns, inode))
| ^~~~~~~~~~~~~
| |
| struct user_namespace *
In file included from include/linux/compat.h:17,
from ./arch/x86/include/asm/ia32.h:8,
from ./arch/x86/include/asm/elf.h:10,
from include/linux/elf.h:6,
from include/linux/module.h:19,
from /root/lustre-release/libcfs/include/libcfs/libcfs.h:36,
from /root/lustre-release/lustre/include/lustre_lib.h:49,
from /root/lustre-release/lustre/include/lustre_dlm.h:46,
from /root/lustre-release/lustre/llite/file.c:39:
include/linux/fs.h:1765:47: note: expected ‘struct mnt_idmap *’ but argument is of type ‘struct user_namespace *’
1765 | bool inode_owner_or_capable(struct mnt_idmap *idmap,
| ~~~~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Could you please replace "init_user_ns" with "nop_mnt_idmap" according to https://review.whamcloud.com/50420 ("LU-16667 build: struct mnt_idmap, linux/filelock.h")?